examples/test/_test.pxd

# This code was automatically generated by CWrap version 0.0.0

cdef extern from "test.h":

    ctypedef long long int LLong

    cdef struct Foo:
        int a
        LLong b

    cdef struct _Bar:
        double b

    ctypedef _Bar Bar

    cdef enum Baz:
        ONE
        TWO
        THREE
        FOUR
        FIVE

    ctypedef Baz Spam

    ctypedef Foo Eggs

    cdef struct __AUnion__sNested:
        char *data

    cdef union AUnion:
        int a
        double b
        long double c
        __AUnion__sNested_t nested_data

    cdef union ___Astruct__uNested:
        float *data

    cdef struct _Astruct:
        Eggs *eggsPtr
        ___Astruct__uNested_t nested_data

    ctypedef _Astruct Astruct

    cdef union __OuterStruct_uInner:
        float num

    cdef struct ____OuterStruct_medStruct_innerStruct:
        int n

    cdef struct __OuterStruct_medStruct:
        double d
        ____OuterStruct_medStruct_innerStruct_t whoa

    cdef struct OuterStruct:
        __OuterStruct_uInner_t innerU
        __OuterStruct_medStruct_t totally

    int *foo_bar(double t, Bar *barptr)

    double *((*crazy_fn(int *, char *, Baz))[10])

    ctypedef char *((*(*crazy_fn_ptr_)(void *))[42])

    cdef struct AnotherFoo:
        int (*func)(double, int *)

    float (*returns_func_ptr(int foo))(float, float)

    double *(*(*(*returns_func_ptr_nested(char *))(int, double))(int, long int))(char *)

    cdef struct CrazyField:
        char *(*(*crazy_ptr)(int))(float *)

    double (*func_ptr_var)()
    int (*(*func_ptr_func_ptr_var)())()

